Fixing the footer so that it displays widgets and doesn't break the whole page, fixed the slider so that it displays and doesn't make the page super wide

--- a/site-sass/brennan/site.footer.scss
+++ b/site-sass/brennan/site.footer.scss
@@ -25,6 +25,10 @@ background-color: $headerbg-grey;
 # Site Footer - Brennan Styling
 --------------------------------------------------------------*/
 
+body {
+  overflow-x: hidden;
+}
+
 .col {
   order: 0;
   flex: 1 2 auto;
