--- a/site-sass/brennan/slick.scss
+++ b/site-sass/brennan/slick.scss
@@ -46,6 +46,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 1440px !important;
 
     &:before,
     &:after {
